--- a/2.Web/5. Vue/02. Vue.md
+++ b/2.Web/5. Vue/02. Vue.md
@@ -88,7 +88,53 @@ npm i
 
 ---
 
+- vuex 추가하기
+
+```bash
+vue add vuex
+```
+
+---
+
+- vuex 핵심 컨셉
+  - `state` : 상태, 중앙에서 관리하는 데이터, state가 바뀌면 DOM이 리로드된다.
+  - `getters` : 저장소 데이터 기준으로 어떠한 값을 계산한 것 (computed 느낌)
+  - `mutations` : state를 바꾸는 로직, 동기적으로 처리, 첫번째 인자 state, commit을 통해 호출
+  - `actions` : 비동기 처리(ex- 외부 데이터 가져오기, 가공), actions에서 mutations를 호출해서 state를 바꾼다, 첫번째 인자 context(commit), dispatch를 통해 호출
+
+---
+
+- Vuex Helper
 
 
 
+---
+
+- mapState
+
+
+
+---
+
+- mapGetters
+
+
+
+---
+
+- Local Storage
+
+[vuex-persistedstate](https://www.npmjs.com/package/vuex-persistedstate) 설치
+
+```bash
+npm install vuex-persistedstate
+```
+
+---
+
+- Netlify 배포
+
+```bash
+npm run build
+```
 
