--- a/0.Activities/02.git_basic.md
+++ b/0.Activities/02.git_basic.md
@@ -59,8 +59,6 @@ Initialized empty Git repository in C:/Users/dltmd/OneDrive/TIL/.git/
 
 
 
-
-
 ### 2. add
 
 작업공간(working directory)에서 변경된 사항을 이력으로 저장하기 위해서는 반드시 staging area라는 공간으로 이동시켜야 한다. 
@@ -226,4 +224,134 @@ $ git rebase --continue
 ```bash
 $ git push origin -f master
 ```
+
+
+
+---
+
+
+
+## ✔ 브랜치 활용하기
+
+git branch feature/nav
+
+git switch feature/nav
+
+git add .
+
+git commit -m "add header"
+
+---
+
+git branch feature/footer
+
+git switch feature/footer
+
+git add .
+
+git commit -m "add footer"
+
+![image-20201016105850056](../git%2520branch%2520featurenav.assets/image-20201016105850056.png)
+
+---
+
+git push origin feature/nav
+
+git push origin feature/footer
+
+`머지리퀘스트` 버튼클릭, 충돌이 없으면 `remove source branch` 버튼 클릭하고 `merge`
+
+![image-20201016110814679](../git%2520branch%2520featurenav.assets/image-20201016110814679.png)
+
+---
+
+git switch master
+
+git pull origin master
+
+git branch -d feature/nav
+
+git log --oneline
+
+
+
+git switch master
+
+git pull origin master
+
+git branch -d feature/footer
+
+git log --oneline
+
+----
+
+**<충돌 발생했을 때>**
+
+git branch feature/title
+
+git switch feature/title
+
+git add .
+
+git commit -m "update titile name en"
+
+git push origin feature/title
+
+
+
+git branch feature/title-ko
+
+git switch feature/title-ko
+
+git add .
+
+git commit -m "update titile name ko"
+
+git push origin feature/title-ko
+
+
+
+`충돌 해결` 버튼 클릭 후 merge
+
+
+
+git switch master
+
+git pull origin master
+
+git branch -d feature/title
+
+
+
+git switch master
+
+git pull origin master
+
+git branch -d feature/title-ko
+
+---
+
+< A와 B가 다른팀일 때>
+
+`Fork` 버튼 클릭
+
+git branch dltmddk1023
+
+git add .
+
+git commit -m "fix korean"
+
+git push origin dltmddk1023
+
+---
+
+
+
+**python manage.py loaddata movies.json**
+
+git branch feature/recommended
+
+git switch feature recommended
+
+git commit -m "migrate&load_data"
 
