--- a/0.Activities/04.Algo_Competition.md
+++ b/0.Activities/04.Algo_Competition.md
@@ -1,48 +1,12 @@
 # 1. Billiards
 
-> 당구알고리즘을 작성하라!
+> 당구 알고리즘을 작성하라!
 
 
 
-### 1-1. Rule
+# 2. SSAFY RACE
 
-- #### **공감** (Empathize)
-
-**고객의 문제에 공감**하는 단계이다. 기술, 정치, 경제, 문화 등 다양한 분야에 대한 호기심을 바탕으로 사용자가 겪을 문제점을 사전에 예측할 수 있다. 
-
-
-
-- #### 문제 정의 (Define)
-
-공감단계에서 얻은 통찰을 바탕으로 진짜 **문제를 정의**하는 과정이다.  `페르소나 기법`을  활용하여 특정 고객이 겪는 **Pain Point를 발굴**하기도 한다.
-
-
-
-- #### 아이디어 도출 (Ideate)
-
-고객에게 적합한 **해결방안을 자유롭게 제시**하는 단계이다. **Pain Point 개선**을 중심으로 여러 사람들이 의견을 공유하고 발전시키는 단계이다. 
-
-
-
-- #### 시제품 제작 (Prototype)
-
-새로운 아이디어를 `프로토타입`으로 만들거나 `시나리오`를 만드는 단계이다.  **Quick & Dirty**한 방법으로 제품, 서비스에 대한 **아이디어를 구체화**한다.
-
-
-
-- #### 테스트 (Test)
-
-프로토타입에 대한 **고객의 피드백을 바탕으로 프로토타입을 개선**하는 단계이다. 이 과정을 반복하며 제품의 완성도를 높일 수 있다.
-
-
-
-
-
-### 1-2. What I Learned 
-
-✔  
-
-
+> 자율주행 알고리즘을 작성하라!
 
 
 
