--- a/0.Activities/02.git_basic.md
+++ b/0.Activities/02.git_basic.md
@@ -3,8 +3,55 @@
 # Git
 
 >Git은 분산 버전 관리 시스템(DVCS)이다.
+
+>Git을 사용하는 목적은 다양하다. 
 >
->소스코드의 버전 및 이력을 관리할 수 있다.
+>싱글 플레이 : 코드 관리 / 백업
+>
+>멀티 플레이 : 협업 Workflow / 서비스 이력관리 / 커밋 규칙과 정확한 메시지 / 코드 리뷰
+
+Repository
+
+Command : [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
+
+Git Flow ( 깃 브랜치 전략 중 하나)
+
+![나의 Git Flow 적응기(겉핥기로 10분만에 익히고 써먹어보자, 백각이불여일행!)](02.git_basic.assets/img.png)
+
+![image-20210107140551552](02.git_basic.assets/image-20210107140551552.png)
+
+- 명령어
+
+commit, branch, checkout, cherry-pick, reset, revert, rebase, merge
+
+`commit` : Git 저장소에 나의 디렉토리에 잇는 모든 파일에 대한 스냅샷을 기록하는 것이다. 커밋할 때마다 디렉토리 전체를 복사하진 않고, 저장소의 이전버전과 다음버전의 변경 내역 ("delta")를 저장한다. 그래서 대부분의 커밋은 그 커밋 위의 부모 커밋을 가리킨다. 
+
+```
+git commit
+```
+
+`branch` : 특정 커밋에 대한 참조이다. 브랜치는 매우 가벼워서 많이 만들어도 메모리나 디스크 공간에 부담이 가지 않는다. 따라서 잘게 브랜치를 나누자!
+
+```
+// 브랜치 생성
+git branch 브랜치이름
+
+// 브랜치 이동
+git checkout 브랜치이름
+
+git commit
+```
+
+`merge` : 두 개의 부모를 가리키는 특별한 커밋을 만든다.  브랜치를 합치는 과정이다. 
+
+``` 
+// master로 이동 후 
+git merge 브랜치이름
+```
+
+`rebase` : 리베이스는 커밋들을 모아서 복사한 뒤, 다른 곳에 떨궈 놓는 것이다.  리베이스를 하면 커밋의 흐름을 보기 좋게 한 줄 로 만들 수 있다.
+
+`head` : 현재 체크아웃된 커밋을 가리킨다. 현재 작업중인 커밋이다. 
 
 
 
